Fixed small responsive redering erors on small devices.

--- a/src/App.css
+++ b/src/App.css
@@ -80,7 +80,3 @@ h1.Home {
   color:black;
   font-size: 100px;
 }
-
-.register-button {
-
-}
