--- a/src/Topic.css
+++ b/src/Topic.css
@@ -40,7 +40,7 @@ p.title.is-4 {
        margin: 20px auto 20px auto;
     }
     div.container.topics-page-canvas {
-      padding: 80px;
+      padding: 100px 0px 0px 0px;
     }
 }
 
@@ -85,10 +85,6 @@ p.title.is-4 {
   -webkit-text-fill-color: transparent;
 }
 
-div.content {
-  padding-right: 20px;
-}
-
 .container {
  background-color: white;
 }
@@ -112,13 +108,7 @@ div.topics-page-canvas {
   margin-left: 5px;
 }
 
-div.votes {
-  height: 100px;
-  width: 100px;
-  position: absolute;
-  bottom: -15px;
-  right: -15px;
-}
+
 
 img.topic-image {
   padding: 0px;
@@ -205,4 +195,24 @@ p.tags {
   color:#858585;
   font-size: 14px;
   margin-left: 10px;
+}
+
+div.content {
+  padding-right: 20px;
+}
+
+.description-container {
+  width: 80%;
+}
+
+.topic-date {
+  width: 200px;
+}
+
+div.votes {
+  height: 100px;
+  width: 100px;
+  position: absolute;
+  bottom: -15px;
+  right: -15px;
 }
